--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,6 @@
 FROM python:3.8
 
-RUN useradd -ms /bin /bash user
-USER user
-WORKDIR /home/user
+WORKDIR /home/code
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt && rm requirements.txt
