--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,14 @@
-FROM python:2.7
+FROM python:3.8
 
-WORKDIR /home/code
+RUN useradd -ms /bin /bash user
+USER user
+WORKDIR /home/user
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt && rm requirements.txt
 
-COPY *.py .
-EXPOSE 8111
-ENTRYPOINT ["python", "wsgi.py"]
+COPY src .
+
+EXPOSE 8000
+
+ENTRYPOINT ["python", "main.py"]
