--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,15 @@
-FROM python:2.7
+FROM python:slim
 
-WORKDIR /home/code
+WORKDIR /projects
 
+RUN python3 -m venv venv
+RUN . venv/bin/activate
+
+# optimize image caching
 COPY requirements.txt .
-RUN pip install -r requirements.txt && rm requirements.txt
+RUN pip install -r requirements.txt
 
-COPY *.py .
-EXPOSE 8111
-ENTRYPOINT ["python", "wsgi.py"]
+COPY . .
+
+EXPOSE 8081
+CMD [ "waitress-serve", "--port=8081", "app:wsgi"]
