--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,4 +12,4 @@ RUN pip install -r requirements.txt
 COPY . .
 
 EXPOSE 8081 
-CMD [ "waitress-serve", "--port=8081", "app:wsgi"]
+CMD [ "waitress-serve", "--port=8081", "app:app"]
